Расширили функционал flatpages в административной панели

--- a/Django Project/second/templates/flatpages/contact_page.html
+++ b/Django Project/second/templates/flatpages/contact_page.html
@@ -6,7 +6,9 @@
 <body>
     <h2>{{ flatpage.title }}</h2>
     <hr>
-    <h3>Наши контакты:</h3>
-    {{ flatpage.content }}
+    <h3><i>Наши контакты:</i></h3>
+    <b>{{ flatpage.content }}</b>
+    <hr>
+    <i>{{ flatpage.content }}</i>
 </body>
 </html>
