--- a/D2/NewsPortal/templates/posts.html
+++ b/D2/NewsPortal/templates/posts.html
@@ -1,9 +1,24 @@
 {% extends 'flatpages/default.html' %}
 
-{% block title %}
-Все статьи
-{% endblock title %}
+{% if posts %}
 
-{% block content %}
-{{ posts }}
-{% endblock content %}
+{% block amount1 %}
+    {{ posts |length }} новости
+{% endblock amount1 %}
+
+{% block amount2 %}
+    {{ posts |length }} новости
+{% endblock amount2 %}
+
+
+    {% block content %}
+        {% for post in posts %}
+        <h2 class="blog-post-title mb-1">{{post.title}}</h2>
+        <p class="blog-post-meta">{{post.post_date}} Автор: <a href="#">{{post.author}}</a></p>
+        <p> {{post.preview}} </p>
+        {% endfor %}
+    {% endblock content %}
+{% else %}
+    <h2>Нет статей</h2>
+{% endif %}
+
