--- a/D1/djangoFlat/templates/products.html
+++ b/D1/djangoFlat/templates/products.html
@@ -1,42 +1,79 @@
-<!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
 
 {% load custom_filters %}
 {% load custom_tags %}
-<!-- Название у нас будет products -->
+
 {% block title %}
 Products
 {% endblock title %}
 
-<!-- В контенте на странице мы выводим все товары -->
 {% block content %}
-<h1>Все товары</h1>
-<!--<h3>{{ time_now |date:'d M Y' }}</h3>-->
-<!-- А вот так мы используем наш тег-->
-<h3>{% current_time %} {% current_time %}</h3>
+   <h1>Все товары</h1>
 
-<h3>{{ next_sale |default_if_none:"О распродаже сообщим позже" }}</h3>
-{% if products %}
-<table>
-    <tr>
-        <td>Название</td>
-        <td>Описание</td>
-        <td>Категория</td>
-        <td>Цена</td>
-        <td>Количество</td>
-    </tr>
+<!--<form action="" method="get" >-->
+<!--    {{ filterset.form.non_field_errors }}-->
+<!--    {{ filterset.form.name__icontains.errors }}-->
+<!--    <p>1{{ filterset.form.name__icontains.id_for_label }}</p>-->
+<!--    <label  for="{{ filterset.form.name__icontains.id_for_label }}">Поиск</label>-->
+<!--    <input-->
+<!--        id ="{{ filterset.form.name__icontains.id }}"-->
+<!--        name ="{{ filterset.form.name__icontains.name }}"-->
+<!--        value ="{{ filterset.form.name__icontains.value }}"-->
+<!--        class="form-control"-->
+<!--    >-->
+<!--    <input type="submit" class="mt-3 btn-primary" value="Найти" />-->
+<!--</form>-->
 
-    {% for product in products %}
-    <tr>
-        <td>{{ product.name }}</td>
-        <td>{{ product.description |truncatewords:1 }}</td>
-        <td>{{ product.category.name }}</td>
-        <td>{{ product.price  |currency:"usd" }}</td>
-        <td>{{ product.quantity }}</td>
-    </tr>
-    {% endfor %}
-</table>
-{% else %}
-    <h2>Товров нет</h2>
-{% endif %}
+   {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
+   <form action="" method="get">
+       {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
+       {{ filterset.form.as_p }}
+       {# Добавим кнопку отправки данных формы #}
+       <input type="submit" value="Отсеять" />
+   </form>
+
+   <hr>
+   {% if products %}
+       <table>
+           <tr>
+               <td>Название</td>
+               <td>Описание</td>
+               <td>Категория</td>
+               <td>Цена</td>
+               <td>Количество</td>
+           </tr>
+
+           {% for product in products %}
+           <tr>
+               <td>{{ product.name }}</td>
+               <td>{{ product.description|truncatechars:15 }}</td>
+               <td>{{ product.category.name }}</td>
+               <td>{{ product.price|currency }}</td>
+               <td>{{ product.quantity }}</td>
+           </tr>
+           {% endfor %}
+
+       </table>
+   {% else %}
+       <h2>Товаров нет!</h2>
+   {% endif %}
+<hr>
+   {% if page_obj.has_previous %}
+
+       <a href="?{% url_replace page=1 %}">1</a>
+       {% if page_obj.previous_page_number != 1 %}
+           ...
+           <a href="?{%url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
+       {% endif %}
+   {% endif %}
+
+   {{ page_obj.number }}
+
+ {% if page_obj.has_next %}
+       <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
+       {% if paginator.num_pages != page_obj.next_page_number %}
+           ...
+           <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
+       {% endif %}
+   {% endif %}
 {% endblock content %}
