--- a/D1/djangoFlat/templates/flatpages/default.html
+++ b/D1/djangoFlat/templates/flatpages/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
     <head>
+        <meta charset="utf-8">
         {% load static%}
         <link href="{% static 'in/style.css' %}" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asul&display=swap">
