--- a/D1/djangoFlat/templates/products.html
+++ b/D1/djangoFlat/templates/products.html
@@ -9,21 +9,6 @@ Products
 
 {% block content %}
    <h1>Все товары</h1>
-
-<!--<form action="" method="get" >-->
-<!--    {{ filterset.form.non_field_errors }}-->
-<!--    {{ filterset.form.name__icontains.errors }}-->
-<!--    <p>1{{ filterset.form.name__icontains.id_for_label }}</p>-->
-<!--    <label  for="{{ filterset.form.name__icontains.id_for_label }}">Поиск</label>-->
-<!--    <input-->
-<!--        id ="{{ filterset.form.name__icontains.id }}"-->
-<!--        name ="{{ filterset.form.name__icontains.name }}"-->
-<!--        value ="{{ filterset.form.name__icontains.value }}"-->
-<!--        class="form-control"-->
-<!--    >-->
-<!--    <input type="submit" class="mt-3 btn-primary" value="Найти" />-->
-<!--</form>-->
-
    {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
    <form action="" method="get">
        {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
@@ -48,7 +33,7 @@ Products
                <td>{{ product.name }}</td>
                <td>{{ product.description|truncatechars:15 }}</td>
                <td>{{ product.category.name }}</td>
-               <td>{{ product.price|currency }}</td>
+               <td>{{ product.price |currency:'usd' }}</td>
                <td>{{ product.quantity }}</td>
            </tr>
            {% endfor %}
