--- a/D1/djangoFlat/templates/flatpages/default.html
+++ b/D1/djangoFlat/templates/flatpages/default.html
@@ -28,7 +28,7 @@
         </div>
         <footer>
             <div class="footer-data"><a class="nav-link2" href="/contacts/" style="text-decoration: none;">Контакты</a><a class="nav-link2" href="/about/" style="text-decoration: none;">Обо мне</a>
-                <data style="grid-area:1 / 5 / 2 / 6;">data</data>
+                <data style="grid-area:1 / 5 / 2 / 6;">{% block data %} {{ time_now }} {% endblock data %}</data>
             </div>
         </footer>
     </body>
