--- a/D1/djangoFlat/templates/product.html
+++ b/D1/djangoFlat/templates/product.html
@@ -1,9 +1,15 @@
 {% extends 'flatpages/default.html' %}
+{% load custom_filters %}
 
 {% block title %}
-Product
+{{ product.name}}
 {% endblock title %}
 
 {% block content %}
-<h1>{{ product }}</h1>
+<h1>{{ product.name }}</h1>
+<p>{{ product.description }} </p>
+<p>Стоимость: {{ product.price |currency:'rub' }} </p>
+<a href="{{ product.id }}/update"><input type="submit" value="Редактировать" /></a>
+<a href="{{ product.id }}/delete"><input type="submit" value="Удалить" /></a>
 {% endblock content %}
+
