--- a/D2/NewsPortal/templates/news.html
+++ b/D2/NewsPortal/templates/news.html
@@ -3,17 +3,19 @@
 {% load filters %}
 <!--проверяем на наличие постов, в дальнейшем будем проверять свежие посты за день-->
 {% if posts %}
-<!--определяем количество постов-->
-{% block amount1 %}
-    {{ posts |length }} новости
-{% endblock amount1 %}
+{# --определяем количество постов-- #}
+    {% block amount1 %}
+        {{ posts |length }} новости
+    {% endblock amount1 %}
 
-{% block amount2 %}
-    {{ posts |length }} новости
-{% endblock amount2 %}
+    {% block amount2 %}
+        {{ posts |length }} новости
+    {% endblock amount2 %}
+
 
 <!--выводим список постов-->
     {% block content %}
+        {% block search %}{% endblock search %}
         {% for post in posts %}
         <h2 class="blog-post-title mb-1">{{post.title |censor }}</h2>
         <p class="blog-post-meta">{{post.post_date  |date:'d M Y'}}</p>
@@ -23,4 +25,5 @@
 {% else %}
     <h2>Нет статей</h2>
 {% endif %}
+
 
