--- a/D2/NewsPortal/templates/post.html
+++ b/D2/NewsPortal/templates/post.html
@@ -6,7 +6,7 @@
 {% block amount1 %}
     {{ post.get_type_display }}
 {% endblock amount1 %}
-
+{% block top %} {% endblock top %}
 {% block amount2 %}
     {{ post.get_type_display }}
 {% endblock amount2 %}
