--- a/D2/NewsPortal/templates/search.html
+++ b/D2/NewsPortal/templates/search.html
@@ -4,6 +4,7 @@
 {% block amount1 %}
     Поиск
 {% endblock amount1 %}
+{% block  top %} {% endblock top %}
 {% block amount2 %}
     Поиск
 {% endblock amount2 %}
