--- a/D2/NewsPortal/templates/flatpages/default.html
+++ b/D2/NewsPortal/templates/flatpages/default.html
@@ -25,10 +25,10 @@
                         <a class="link-secondary" href="#">Подписаться</a>
                     </div>
                     <div class="col-4 text-center">
-                        <a class="blog-header-logo text-dark" href="#">Новостной Портал</a>
+                        <a class="blog-header-logo text-dark" href="/news">Новостной Портал</a>
                     </div>
                     <div class="col-4 d-flex justify-content-end align-items-center">
-                        <a class="link-secondary" href="#" aria-label="Search"> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24">
+                        <a class="link-secondary" href="/news/search" aria-label="Search"> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24">
                                 <title>Поиск</title>
                                 <circle cx="10.5" cy="10.5" r="7.5"/>
                                 <path d="M21 21l-5.2-5.2"/>
@@ -38,31 +38,35 @@
                 </div>
             </header>
             <div class="nav-scroller py-1 mb-2">
-                <nav class="nav d-flex justify-content-between">
-                    <a class="p-2 link-secondary" href="#">Спорт</a>
-                    <a class="p-2 link-secondary" href="#">U.S.</a>
-                    <a class="p-2 link-secondary" href="#">Technology</a>
-                    <a class="p-2 link-secondary" href="#">Design</a>
-                    <a class="p-2 link-secondary" href="#">Culture</a>
-                    <a class="p-2 link-secondary" href="#">Business</a>
-                    <a class="p-2 link-secondary" href="#">Politics</a>
-                    <a class="p-2 link-secondary" href="#">Opinion</a>
-                    <a class="p-2 link-secondary" href="#">Science</a>
-                    <a class="p-2 link-secondary" href="#">Health</a>
-                    <a class="p-2 link-secondary" href="#">Style</a>
-                    <a class="p-2 link-secondary" href="#">Travel</a>
-                </nav>
+<!--                <nav class="nav d-flex justify-content-between">-->
+<!--                    <a class="p-2 link-secondary" href="#">Спорт</a>-->
+<!--                    <a class="p-2 link-secondary" href="#">U.S.</a>-->
+<!--                    <a class="p-2 link-secondary" href="#">Technology</a>-->
+<!--                    <a class="p-2 link-secondary" href="#">Design</a>-->
+<!--                    <a class="p-2 link-secondary" href="#">Culture</a>-->
+<!--                    <a class="p-2 link-secondary" href="#">Business</a>-->
+<!--                    <a class="p-2 link-secondary" href="#">Politics</a>-->
+<!--                    <a class="p-2 link-secondary" href="#">Opinion</a>-->
+<!--                    <a class="p-2 link-secondary" href="#">Science</a>-->
+<!--                    <a class="p-2 link-secondary" href="#">Health</a>-->
+<!--                    <a class="p-2 link-secondary" href="#">Style</a>-->
+<!--                    <a class="p-2 link-secondary" href="#">Travel</a>-->
+<!--                </nav>-->
             </div>
         </div>
         <main class="container">
+
             <div class="bg-gradient bg-opacity-75 mb-4 p-4 p-md-5 rounded text-bg-dark">
+                {% block top %}
                 <div class="col-lg-11 col-md-6 px-0">
                     <h1 class="fst-italic h1 me-auto">Добро пожаловать на мой учебный проект</h1>
                     <p class="lead my-3">Вобще то тут должна быть горячая статья))</p>
                     <p class="lead mb-0"><a href="#" class="text-white fw-bold">подробнее...</a></p>
                 </div>
+                {% endblock top %}
             </div>
-<!--            <div class="row mb-2">-->
+
+            <div class="row mb-2">
 <!--                <div class="col-md-6">-->
 <!--                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">-->
 <!--                        <div class="col p-4 d-flex flex-column position-static">-->
@@ -99,7 +103,7 @@
 <!--                        </div>-->
 <!--                    </div>-->
 <!--                </div>-->
-<!--            </div>-->
+            </div>
             <div class="row g-5">
                 <div class="col-md-8">
                     <h3 class="pb-4 mb-4 fst-italic border-bottom"> На хвосте у птички - {% block amount2 %} {% endblock amount2 %}</h3>
@@ -133,35 +137,15 @@
                 <div class="col-md-4">
                     <div class="position-sticky" style="top: 2rem;">
                         <div class="p-4 mb-3 bg-light rounded">
-                            <h4 class="fst-italic">Обо мне</h4>
-                            <p class="mb-0">Студент Skillfaktory Шулепов К. Н.</p>
-                        </div>
-                        <div class="p-4">
                             <h4 class="fst-italic">Архив</h4>
-                            <ol class="list-unstyled mb-0">
-                                <li><a href="#">_</a>
-                                </li>
-                                <li><a href="#">_</a>
-                                </li>
-                                <li><a href="#"> </a>
-                                </li>
-                                <li><a href="#"> </a>
-                                </li>
-                                <li><a href="#"> </a>
-                                </li>
-                                <li><a href="#"> </a>
-                                </li>
-                            </ol>
+                            <li><a class="mb-0" href="">_</a></li>
+                            <li><a class="mb-0" href="">_</a></li>
                         </div>
                         <div class="p-4">
-                            <h4 class="fst-italic">Elsewhere</h4>
-                            <ol class="list-unstyled">
-                                <li><a href="#">GitHub</a>
-                                </li>
-                                <li><a href="#">VK</a>
-                                </li>
-                                <li><a href="#">Telegram</a>
-                                </li>
+                            <h4 class="fst-italic"></h4>
+                            <ol class="list-unstyled mb-0">
+                                <li><a href="/contacts">Контакты</a></li>
+                                <li><a href="/about">О нас</a></li>
                             </ol>
                         </div>
                     </div>
