--- a/D2/NewsPortal/templates/edit.html
+++ b/D2/NewsPortal/templates/edit.html
@@ -1,15 +1,14 @@
 {% extends 'flatpages/default.html' %}
 
 {% block amount1 %}
-    Редактирование
+    Edit
 {% endblock amount1 %}
 
 {% block top %}
-{% endblock top %}
-
 {% block amount2 %}
-    Редактирование
+    <h1 class="fst-italic h1 me-auto">Edit</h1>
 {% endblock amount2 %}
+{% endblock top %}
 
 {% block content %}
 
