--- a/D2/NewsPortal/templates/flatpages/contact_page.html
+++ b/D2/NewsPortal/templates/flatpages/contact_page.html
@@ -4,23 +4,23 @@
 {{ flatpage.title }}
 {% endblock title %}
 
-  {% block amount1 %}
-        Контакты
-    {% endblock amount1 %}
+{% block amount1 %}
+     Contacts
+{% endblock amount1 %}
 
-    {% block amount2 %}
-        Контакты
-    {% endblock amount2 %}
+{% block amount2 %}
+<h1 class="fst-italic h1 me-auto">Contacts</h1>
+{% endblock amount2 %}
  
 {% block content %}
 <div class="p-4 mb-3 bg-light rounded">
     <h3>{{ flatpage.content }}</h3>
-    <li><a href="#">Телефон</a>
+    <li><a href="#">Phone</a>
     </li>
     <li><a href="#">email</a>
     </li>
 <hr>
-    <h4 class="fst-italic">Ещё</h4>
+    <h4 class="fst-italic">Elseware</h4>
     <ol class="list-unstyled">
         <li><a href="#">GitHub</a>
         </li>
