--- a/D2/NewsPortal/templates/post.html
+++ b/D2/NewsPortal/templates/post.html
@@ -6,15 +6,15 @@
 {% block amount1 %}
     {{ post.get_type_display }}
 {% endblock amount1 %}
-{% block top %} {% endblock top %}
+
 {% block amount2 %}
-    {{ post.get_type_display }}
+    <h1 class="fst-italic h1 me-auto">{{ post.get_type_display }}</h1>
 {% endblock amount2 %}
 
 
 <!-- В контенте на странице мы выводим содержимое Post, идентификатор которого был передан в url -->
 {% block content %}
  <h2 class="blog-post-title mb-1">{{ post.title |censor }}</h2>
-        <p class="blog-post-meta">{{ post.post_date }} Автор: <a href="#">{{post.author}}</a></p>
+        <p class="blog-post-meta">{{ post.post_date }} Author: <a href="#">{{post.author}}</a></p>
         <p> {{post.post_text |censor }} </p>
 {% endblock content %}
