--- a/D2/NewsPortal/templates/flatpages/about.html
+++ b/D2/NewsPortal/templates/flatpages/about.html
@@ -1,11 +1,11 @@
 {% extends 'flatpages/default.html' %}
 
 {% block amount1 %}
-    О нас
+    About us
 {% endblock amount1 %}
 
 {% block amount2 %}
-    О нас
+<h1 class="fst-italic h1 me-auto">About</h1>
 {% endblock amount2 %}
 
 {% block content %}
