--- a/D2/NewsPortal/templates/flatpages/default.html
+++ b/D2/NewsPortal/templates/flatpages/default.html
@@ -1,6 +1,6 @@
 <!--bootstrap шаблон-->
 <!doctype html>
-<html lang="ru">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,18 +22,18 @@
             <header class="blog-header lh-1 py-3">
                 <div class="row flex-nowrap justify-content-between align-items-center">
                     <div class="col-4 pt-1">
-                        <a class="link-secondary" href="#">Подписаться</a>
+                        <a class="link-secondary" href="#">Subscribe</a>
                     </div>
                     <div class="col-4 text-center">
-                        <a class="blog-header-logo text-dark" href="/news">Новостной Портал</a>
+                        <a class="blog-header-logo text-dark" href="/news">News Portal</a>
                     </div>
                     <div class="col-4 d-flex justify-content-end align-items-center">
                         <a class="link-secondary" href="/news/search" aria-label="Search"> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24">
-                                <title>Поиск</title>
+                                <title>Find</title>
                                 <circle cx="10.5" cy="10.5" r="7.5"/>
                                 <path d="M21 21l-5.2-5.2"/>
                             </svg> </a>
-                        <a class="btn btn-sm btn-outline-secondary" href="#">Регистрация</a>
+                        <a class="btn btn-sm btn-outline-secondary" href="#">Registration</a>
                     </div>
                 </div>
             </header>
@@ -59,9 +59,8 @@
             <div class="bg-gradient bg-opacity-75 mb-4 p-4 p-md-5 rounded text-bg-dark">
                 {% block top %}
                 <div class="col-lg-11 col-md-6 px-0">
-                    <h1 class="fst-italic h1 me-auto">Добро пожаловать на мой учебный проект</h1>
-                    <p class="lead my-3">Вобще то тут должна быть горячая статья))</p>
-                    <p class="lead mb-0"><a href="#" class="text-white fw-bold">подробнее...</a></p>
+                     {% block amount2 %}
+                     {% endblock amount2 %}
                 </div>
                 {% endblock top %}
             </div>
@@ -106,7 +105,6 @@
             </div>
             <div class="row g-5">
                 <div class="col-md-8">
-                    <h3 class="pb-4 mb-4 fst-italic border-bottom"> На хвосте у птички - {% block amount2 %} {% endblock amount2 %}</h3>
                     <article class="blog-post">
                         {% block content %} {% endblock content %}
                     </article>
@@ -144,15 +142,15 @@
                 <div class="col-md-4">
                     <div class="position-sticky" style="top: 2rem;">
                         <div class="p-4 mb-3 bg-light rounded">
-                            <h4 class="fst-italic">Архив</h4>
+                            <h4 class="fst-italic">Arhive</h4>
                             <li><a class="mb-0" href="">_</a></li>
                             <li><a class="mb-0" href="">_</a></li>
                         </div>
                         <div class="p-4">
                             <h4 class="fst-italic"></h4>
                             <ol class="list-unstyled mb-0">
-                                <li><a href="/contacts">Контакты</a></li>
-                                <li><a href="/about">О нас</a></li>
+                                <li><a href="/contacts">Contacts</a></li>
+                                <li><a href="/about">About</a></li>
                             </ol>
                         </div>
                     </div>
