--- a/D2/NewsPortal/templates/search.html
+++ b/D2/NewsPortal/templates/search.html
@@ -2,11 +2,11 @@
 {% extends 'news.html' %}
 
 {% block amount1 %}
-    Поиск
+    Filter
 {% endblock amount1 %}
 {% block  top %} {% endblock top %}
 {% block amount2 %}
-    Поиск
+    Filter
 {% endblock amount2 %}
 
 {% block search %}
@@ -15,7 +15,7 @@
        {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
        {{ filterset.form.as_p }}
        {# Добавим кнопку отправки данных формы #}
-       <input type="submit" value="Найти" />
+       <input type="submit" value="Filter" />
 
    </form>
 <hr>
