change and comments clean code from garbages

--- a/D2/NewsPortal/templates/news.html
+++ b/D2/NewsPortal/templates/news.html
@@ -5,7 +5,7 @@
 {% if posts %}
 {# --определяем количество постов-- #}
     {% block amount1 %}
-        {{ page_obj.paginator.count }} News
+        {{ page_obj.paginator.count }} Posts
     {% endblock amount1 %}
 
     {% block amount2 %}
