--- a/D1/djangoFlat/templates/flatpages/about.html
+++ b/D1/djangoFlat/templates/flatpages/about.html
@@ -5,6 +5,8 @@
 {% endblock title %}
 
 {% block content %}
-
+    <h2>{{ flatpage.title }}</h2>
+    <hr>
+    <h3>About:</h3>
 {{ flatpage.content }}
 {% endblock content %}
