--- a/D1/djangoFlat/templates/products.html
+++ b/D1/djangoFlat/templates/products.html
@@ -7,6 +7,14 @@
 Products
 {% endblock title %}
 
+{% block auth %}
+    {% if user.is_authenticated %}
+        <li class="nav-item"><a class="nav-link" href="/accounts/login/">login</a></li>
+    {% else %}
+        <li class="nav-item"><a class="nav-link" href="/accounts/logout/">logout</a></li>
+    {% endif %}
+{% endblock auth %}
+
 {% block content %}
    <h1>Все товары</h1>
    {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
@@ -42,6 +50,15 @@ Products
    {% else %}
        <h2>Товаров нет!</h2>
    {% endif %}
+<hr>
+                    {% if user.is_authenticated %}
+                    <p>Welcome, {{ user.username }}. Thanks for logging in.</p>
+                    {% else %}
+                    <p>Welcome, new user. Please log in.</p>
+                    {% endif %}
+{% if perms.simpleapp.add_product %}
+    <a href="{% url 'product_create' %}">Добавить товар</a>
+{% endif %}
 <hr>
    {% if page_obj.has_previous %}
 
