--- a/D1/djangoFlat/templates/flatpages/default.html
+++ b/D1/djangoFlat/templates/flatpages/default.html
@@ -27,16 +27,21 @@
                         <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="/contacts/">Contacts</a></li>
                         {% block auth %}
+                            {% if user.is_authenticated %}
+                                <li class="nav-item"><a class="nav-link" href="/accounts/logout/">logout</a></li>
+                            {% else %}
+                                <li class="nav-item"><a class="nav-link" href="/accounts/login/">login</a></li>
+                             {% endif %}
                         {% endblock auth %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
+<!--                        <li class="nav-item dropdown">-->
+<!--                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>-->
+<!--                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">-->
+<!--                                <li><a class="dropdown-item" href="#">Action</a></li>-->
+<!--                                <li><a class="dropdown-item" href="#">Another action</a></li>-->
+<!--                                <li><hr class="dropdown-divider" /></li>-->
+<!--                                <li><a class="dropdown-item" href="#">Something else here</a></li>-->
+<!--                            </ul>-->
+<!--                        </li>-->
                     </ul>
                 </div>
             </div>
