Наводим марафет add authorisation add permissions add login/logout links

--- a/D2/NewsPortal/templates/delete.html
+++ b/D2/NewsPortal/templates/delete.html
@@ -8,10 +8,13 @@
     <h1 class="fst-italic h1 me-auto">Delete</h1>
 {% endblock amount2 %}
 
+{% block preview %}
+{% endblock %}
+
 {% block content %}
   <form action="" method="post">
     {% csrf_token %}
     <p>Delete "{{ object.title }}"?</p>
-    <input type="submit" value="Delete" />
+    <input class="btn btn-outline-primary rounded-pill" type="submit" value="Delete" />
   </form>
 {% endblock content  %}
