--- a/D2/NewsPortal/templates/flatpages/about.html
+++ b/D2/NewsPortal/templates/flatpages/about.html
@@ -8,6 +8,9 @@
 <h1 class="fst-italic h1 me-auto">About</h1>
 {% endblock amount2 %}
 
+{% block preview %}
+{% endblock %}
+
 {% block content %}
     {{ flatpage.content }}
 {% endblock content %}
