--- a/D2/NewsPortal/templates/flatpages/contact_page.html
+++ b/D2/NewsPortal/templates/flatpages/contact_page.html
@@ -11,7 +11,10 @@
 {% block amount2 %}
 <h1 class="fst-italic h1 me-auto">Contacts</h1>
 {% endblock amount2 %}
- 
+
+{% block preview %}
+{% endblock %}
+
 {% block content %}
 <div class="p-4 mb-3 bg-light rounded">
     <h3>{{ flatpage.content }}</h3>
