--- a/D2/NewsPortal/templates/post.html
+++ b/D2/NewsPortal/templates/post.html
@@ -11,10 +11,16 @@
     <h1 class="fst-italic h1 me-auto">{{ post.get_type_display }}</h1>
 {% endblock amount2 %}
 
+{% block preview %}
+{% endblock %}
 
 <!-- В контенте на странице мы выводим содержимое Post, идентификатор которого был передан в url -->
 {% block content %}
  <h2 class="blog-post-title mb-1">{{ post.title |censor }}</h2>
         <p class="blog-post-meta">{{ post.post_date }} Author: <a href="#">{{post.author}}</a></p>
         <p> {{post.post_text |censor }} </p>
+{% if perms.newsapp.change_post or perms.newsapp.delete_post %}
+<a class="btn btn-outline-primary rounded-pill" href="{{ post.id }}/edit">Edit</a>
+<a class="btn btn-outline-primary rounded-pill" href="{{ post.id }}/delete">Delete</a>
+{% endif %}
 {% endblock content %}
