--- a/D2/NewsPortal/templates/flatpages/default.html
+++ b/D2/NewsPortal/templates/flatpages/default.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
         <meta name="generator" content="Hugo 0.108.0">
-        <title>News Portal - {% block amount1 %} {% endblock amount1 %}</title>
+        <title>Login as {{ user }}</title>
         <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
         {% load static %}
         <link href="{% static '/assets/dist/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -33,7 +33,11 @@
                                 <circle cx="10.5" cy="10.5" r="7.5"/>
                                 <path d="M21 21l-5.2-5.2"/>
                             </svg> </a>
-                        <a class="btn btn-sm btn-outline-secondary" href="#">Registration</a>
+                        {% if user.is_authenticated %}
+                            <a class="btn btn-sm btn-outline-secondary" href="/accounts/logout">Logout</a>
+                        {% else %}
+                            <a class="btn btn-sm btn-outline-secondary" href="/accounts/login">Login</a>
+                        {% endif %}
                     </div>
                 </div>
             </header>
@@ -64,45 +68,46 @@
                 </div>
                 {% endblock top %}
             </div>
-
+            {% block preview %}
             <div class="row mb-2">
-<!--                <div class="col-md-6">-->
-<!--                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">-->
-<!--                        <div class="col p-4 d-flex flex-column position-static">-->
-<!--                            <strong class="d-inline-block mb-2 text-primary">World</strong>-->
-<!--                            <h3 class="mb-0">Featured post</h3>-->
-<!--                            <div class="mb-1 text-muted">Nov 12</div>-->
-<!--                            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>-->
-<!--                            <a href="#" class="stretched-link">Continue reading</a>-->
-<!--                        </div>-->
-<!--                        <div class="col-auto d-none d-lg-block">-->
-<!--                            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">-->
-<!--                                <title>Placeholder</title>-->
-<!--                                <rect width="100%" height="100%" fill="#55595c"/>-->
-<!--                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>-->
-<!--                            </svg>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-md-6">-->
-<!--                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">-->
-<!--                        <div class="col p-4 d-flex flex-column position-static">-->
-<!--                            <strong class="d-inline-block mb-2 text-success">Design</strong>-->
-<!--                            <h3 class="mb-0">Post title</h3>-->
-<!--                            <div class="mb-1 text-muted">Nov 11</div>-->
-<!--                            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>-->
-<!--                            <a href="#" class="stretched-link">Continue reading</a>-->
-<!--                        </div>-->
-<!--                        <div class="col-auto d-none d-lg-block">-->
-<!--                            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">-->
-<!--                                <title>Placeholder</title>-->
-<!--                                <rect width="100%" height="100%" fill="#55595c"/>-->
-<!--                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>-->
-<!--                            </svg>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="col-md-6">
+                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 text-primary">World</strong>
+                            <h3 class="mb-0">Featured post</h3>
+                            <div class="mb-1 text-muted">Nov 12</div>
+                            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#" class="stretched-link">Continue reading</a>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#55595c"/>
+                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 text-success">Design</strong>
+                            <h3 class="mb-0">Post title</h3>
+                            <div class="mb-1 text-muted">Nov 11</div>
+                            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#" class="stretched-link">Continue reading</a>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#55595c"/>
+                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                            </svg>
+                        </div>
+                    </div>
+                </div>
             </div>
+            {% endblock %}
             <div class="row g-5">
                 <div class="col-md-8">
                     <article class="blog-post">
@@ -142,6 +147,10 @@
                 <div class="col-md-4">
                     <div class="position-sticky" style="top: 2rem;">
                         <div class="p-4 mb-3 bg-light rounded">
+                            {% if perms.newsapp.add_post %}
+                             <a class="btn btn-outline-primary rounded-pill" href="create">Create Post</a>
+                            {% endif %}
+                            <hr>
                             <h4 class="fst-italic">Arhive</h4>
                             <li><a class="mb-0" href="">_</a></li>
                             <li><a class="mb-0" href="">_</a></li>
