--- a/D2/NewsPortal/templates/delete.html
+++ b/D2/NewsPortal/templates/delete.html
@@ -5,7 +5,7 @@
 {% endblock amount1 %}
 
 {% block amount2 %}
-    <h1 class="fst-italic h1 me-auto">Delete</h1>
+    <h1 class="fst-italic h1 me-auto">Are You sure you want to DELETE</h1>
 {% endblock amount2 %}
 
 {% block preview %}
@@ -15,6 +15,6 @@
   <form action="" method="post">
     {% csrf_token %}
     <p>Delete "{{ object.title }}"?</p>
-    <input class="btn btn-outline-primary rounded-pill" type="submit" value="Delete" />
+        <input class="btn btn-outline-primary rounded-pill" type="submit" value="Delete" />
   </form>
 {% endblock content  %}
