--- a/D2/NewsPortal/templates/create.html
+++ b/D2/NewsPortal/templates/create.html
@@ -19,6 +19,6 @@
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Save" />
+        <input class="btn btn-outline-primary rounded-pill" type="submit" value="Save" />
     </form>
 {% endblock content %}
