--- a/D2/NewsPortal/templates/search.html
+++ b/D2/NewsPortal/templates/search.html
@@ -4,10 +4,13 @@
 {% block amount1 %}
     Filter
 {% endblock amount1 %}
-{% block  top %} {% endblock top %}
+
 {% block amount2 %}
     Filter
 {% endblock amount2 %}
+
+{% block preview %}
+{% endblock %}
 
 {% block search %}
    {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
