beging homework D6, find signal "ManyToMany"

--- a/D2/NewsPortal/templates/search.html
+++ b/D2/NewsPortal/templates/search.html
@@ -1,13 +1,9 @@
 {# наследуемся от шаблона news #}
 {% extends 'news.html' %}
 
-{% block amount1 %}
-    Filter
-{% endblock amount1 %}
-
-{% block amount2 %}
-    Filter
-{% endblock amount2 %}
+{% block top %}
+<h1 class="fst-italic h1 me-auto">Filter</h1>
+{% endblock top %}
 
 {% block preview %}
 {% endblock %}
