--- a/D2/NewsPortal/templates/flatpages/default.html
+++ b/D2/NewsPortal/templates/flatpages/default.html
@@ -37,7 +37,10 @@
                         <a class="blog-header-logo text-dark" href="/news">News Portal</a>
                     </div>
                     <div class="col-4 d-flex justify-content-end align-items-center">
-                        <a class="link-secondary" href="/news/search" aria-label="Search"> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24">
+                        <a class="link-secondary" href="/news/search" aria-label="Search">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
+                                 stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                 class="mx-3" role="img" viewBox="0 0 24 24">
                                 <title>Find</title>
                                 <circle cx="10.5" cy="10.5" r="7.5"/>
                                 <path d="M21 21l-5.2-5.2"/>
@@ -70,7 +73,7 @@
         </div>
 
         <main class="container">
-{% cache 300 top %}
+
             {% block top %}
             <div class="bg-gradient bg-opacity-75 mb-4 p-4 p-md-5 rounded text-bg-dark">
 
@@ -81,8 +84,8 @@
 
             </div>
             {% endblock top %}
-{% endcache top %}
-{% cache 300 preview %}
+
+
             {% block preview %}
             <div class="row mb-2">
                 <div class="col-md-6">
@@ -96,7 +99,9 @@
                             <a href="{{best_p.id}}" class="stretched-link">Continue reading</a>
                         </div>
                         <div class="col-auto d-none d-lg-block">
-                            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
+                                 role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
+                                 focusable="false">
                                 <title>Placeholder</title>
                                 <rect width="100%" height="100%" fill="#55595c"/>
                                 <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
@@ -125,7 +130,7 @@
                 </div>
             </div>
             {% endblock %}
-{% endcache preview %}
+
             <div class="row g-5">
                 <div class="col-md-8">
                     <article class="blog-post">
@@ -162,7 +167,6 @@
                     {% endif %}
                     </nav>
                 </div>
-                {% cache 3600 archive %}
                 <div class="col-md-4">
                     <div class="position-sticky" style="top: 2rem;">
                         <div class="p-4 mb-3 bg-light rounded">
@@ -171,8 +175,10 @@
                                 <a class="btn btn-outline-primary rounded-pill" href="/news/create">Create News</a>
                                 <p> </p>
                                 <a class="btn btn-outline-primary rounded-pill" href="/articles/create">Create Article</a>
+                                <hr>
                             {% endif %}
-                            <hr>
+                            {% cache 3600 archive %}
+
                             <h4 class="fst-italic">Arhive</h4>
                             <li><a class="mb-0" href="">_</a></li>
                             <li><a class="mb-0" href="">_</a></li>
