Add comments for post in views, fix most most discussed post

--- a/D2/NewsPortal/templates/post.html
+++ b/D2/NewsPortal/templates/post.html
@@ -20,15 +20,16 @@
  <h2 class="blog-post-title mb-1">{{ post.title |censor }}</h2>
         <p class="blog-post-meta">{{ post.post_date }} Author: <a href="#">{{post.author}}</a></p>
         <p> {{post.post_text |censor }} </p>
-{% comments post.id as coms %}
-{% if coms %}
+{% if comments %}
+
         <hr>
         <h5>Comments:</h5>
-        {% for comment in coms %}
+        {% for comment in comments %}
         <p align = right ><i><b>{{ comment.user_comment }}</b></i></p>
         <p align = right >{{ comment.text_comment }}</p>
         {% endfor %}
 {% endif %}
+
 {% if perms.newsapp.change_post or perms.newsapp.delete_post %}
         {# добавляем проверку что пользователь является автором этого поста #}
         {# когда появятся модераторы и редакторы прийдется сделать проверку и для них #}
