--- a/D2/NewsPortal/templates/flatpages/default.html
+++ b/D2/NewsPortal/templates/flatpages/default.html
@@ -7,7 +7,10 @@
 {% load cache %}
 
     <head>
-        <title>Login as {{ user }}</title>
+        <title>
+            {% block amount1 %}
+            {% endblock %}
+        </title>
         {% cache 300 head %}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,6 +49,7 @@
                                 <path d="M21 21l-5.2-5.2"/>
                             </svg> </a>
         {% endcache header %}
+                        <a class="link-secondary" href=# >{{ user }} </a>
                         {% if user.is_authenticated %}
                             <a class="btn btn-sm btn-outline-secondary" href="/accounts/logout">Logout</a>
                         {% else %}
@@ -151,7 +155,7 @@
                         {% endif %}
 
                         {# Информация о текущей странице #}
-                        <p class="btn btn-outline-primary rounded-pill">{{ page_obj.number }}</p>
+                        <a class="btn btn-outline-primary rounded-pill">{{ page_obj.number }}</a>
 
                         {# Информация о следующих страницах #}
                         {% if page_obj.has_next %}
