add manage.py command - clearbase (delete posts in category)

--- a/D2/NewsPortal/templates/news.html
+++ b/D2/NewsPortal/templates/news.html
@@ -6,7 +6,7 @@
 {% if posts %}
 {# --определяем количество постов-- #}
     {% block amount1 %}
-        {{ page_obj.paginator.count }} Posts
+        News Portal - {{ page_obj.paginator.count }} Posts
     {% endblock amount1 %}
     {% block amount2 %}
         <h1 class="fst-italic h1 me-auto">Welcome to my learning project</h1>
