--- a/D2/NewsPortal/templates/403.html
+++ b/D2/NewsPortal/templates/403.html
@@ -1,13 +1,15 @@
+{% load i18n %}
+
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Ошибка 403</title>
+   <title>{% trans "Error 403" %}</title>
 </head>
 {% block amount1 %}
-   Страница не найдена
+   {% trans "Page not found" %}
 {% endblock %}
 <body>
-   Кажется, у Вас нет доступа к данной странице...
+{% trans "It seems that you do not have access to this page..." %}
 </body>
 </html>
