--- a/D2/NewsPortal/templates/flatpages/about.html
+++ b/D2/NewsPortal/templates/flatpages/about.html
@@ -1,11 +1,12 @@
 {% extends 'flatpages/default.html' %}
+{% load i18n %}
 
 {% block amount1 %}
-    About us
+    {% trans "About us" %}
 {% endblock amount1 %}
 
 {% block amount2 %}
-<h1 class="fst-italic h1 me-auto">About</h1>
+<h1 class="fst-italic h1 me-auto">{% trans "About" %}</h1>
 {% endblock amount2 %}
 
 {% block preview %}
