--- a/D2/NewsPortal/templates/flatpages/default.html
+++ b/D2/NewsPortal/templates/flatpages/default.html
@@ -6,14 +6,14 @@
 {% load custom_tags %}
 {% load filters %}
 {% load cache %}
-
+{% load tz %} <!-- тег для работы с часовыми поясами -->
 
 <head>
     <title>
         {% block amount1 %}
         {% endblock %}
     </title>
-    {% cache 300 head %}
+    {% cache 60 head %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -24,6 +24,8 @@
     <link href="{% static '/assets/dist/css/bootstrap.min.css' %}" rel="stylesheet">
     <style>
         .bd-placeholder-img { font-size: 1.125rem; text-anchor: middle; -webkit-user-select: none; -moz-user-select: none; user-select: none; } @media (min-width: 768px) { .bd-placeholder-img-lg {  font-size: 3.5rem; } } .b-example-divider { height: 3rem; background-color: rgba(0, 0, 0, .1); border: solid rgba(0, 0, 0, .15); border-width: 1px 0; box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15); } .b-example-vr { flex-shrink: 0; width: 1.5rem; height: 100vh; } .bi { vertical-align: -.125em; fill: currentColor; } .nav-scroller { position: relative; z-index: 2; height: 2.75rem; overflow-y: hidden; } .nav-scroller .nav { display: flex; flex-wrap: nowrap; padding-bottom: 1rem; margin-top: -1px; overflow-x: auto; text-align: center; white-space: nowrap; -webkit-overflow-scrolling: touch; }
+
+        body {background-color: {% if current_time.hour >= 19 or current_time.hour <= 7 %} #E0E0E0 {% else %} white {% endif %};}
     </style>
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap"
@@ -34,13 +36,14 @@
 </head>
 
 <body>
-    {% cache 300 header %}
+    {% cache 60 header %}
     <div class="container">
         <header class="blog-header lh-1 py-3">
             <div class="row flex-nowrap justify-content-between align-items-center">
                 <div class="col-4 pt-1">
                     <a class="link-secondary" href="/subscriptions">{% trans "Subscribe" %}</a>
                 </div>
+
                 <div class="col-4 text-center">
                     <a class="blog-header-logo text-dark" href="/news">{% trans "News Portal" %}</a>
                 </div>
@@ -55,7 +58,8 @@
                         </svg> </a>
     {% endcache header %}
                     <form action="{% url 'set_language' %}" method="POST"> {% csrf_token %} <!-- Не забываем по csrf_token для POST запросов -->
-                        <input type="hidden" name="next" value="{{ redirect_to }}">
+                        <input type="hidden" name="next" value="/clear{{ redirect_to }}">
+
                             {% get_current_language as LANGUAGE_CODE %}
 
                         <select name="language" id="">
@@ -79,8 +83,22 @@
                 </div>
             </div>
         </header>
-<!--            <div class="nav-scroller py-1 mb-2">-->
-<!--                <nav class="nav d-flex justify-content-between">-->
+            <div class="nav-scroller py-1 mb-2">
+                <nav class="nav d-flex justify-content-between">
+                    {% get_current_timezone as TIME_ZONE %}
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    <label for="timezone">Time zone:</label>
+                    <select name="timezone">
+                        {% for tz in timezones %}
+                        <option value="{{ tz }}"{% if tz == TIME_ZONE %} selected {% endif %}>{{ tz }}</option>
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="Set">
+                </form>
+                {{ TIME_ZONE }}
+                {{ current_time }} <!-- Отображаем время в выбранном часовом поясе  -->
+
 <!--                    <a class="p-2 link-secondary" href="#">Спорт</a>-->
 <!--                    <a class="p-2 link-secondary" href="#">U.S.</a>-->
 <!--                    <a class="p-2 link-secondary" href="#">Technology</a>-->
@@ -93,8 +111,8 @@
 <!--                    <a class="p-2 link-secondary" href="#">Health</a>-->
 <!--                    <a class="p-2 link-secondary" href="#">Style</a>-->
 <!--                    <a class="p-2 link-secondary" href="#">Travel</a>-->
-<!--                </nav>-->
-<!--            </div>-->
+                </nav>
+            </div>
     </div>
 
     <main class="container">
@@ -196,7 +214,7 @@
                             <a class="btn btn-outline-primary rounded-pill" href="/articles/create">{% trans "Create Article" %}</a>
                             <hr>
                         {% endif %}
-                        {% cache 3600 archive %}
+                        {% cache 300 archive %}
 
                         <h4 class="fst-italic">{% trans "Arhive" %}</h4>
                         <li><a class="mb-0" href="">_</a></li>
@@ -214,7 +232,7 @@
             {% endcache archive %}
         </div>
     </main>
-    {% cache 3600 footer %}
+    {% cache 300 footer %}
     <footer class="blog-footer">
         <p>{% trans "Blog template built for" %} <a href="https://getbootstrap.com/">Bootstrap</a> {% trans "by" %} <a href="https://twitter.com/mdo">@mdo</a>.</p>
         <p> <a href="#">{% trans "Back to top" %}</a> </p>
