--- a/D2/NewsPortal/templates/weekly_posts.html
+++ b/D2/NewsPortal/templates/weekly_posts.html
@@ -1,11 +1,12 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{% trans "Title" %}</title>
 </head>
 <body>
-<h2>Статьи за неделю на News Portal:</h2>
+<h2>{% trans "Articles for the week on News Portal:" %}}</h2>
 <ul>
     {% for post in posts %}
         <li><a href="{{ link }}{{ post.get_absolute_url }}">{{ post.title }}</a></li>
